external-crates/move/crates/move-compiler/tests/move_2024/constants/cross_module_call_forms.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E03022]: invalid usage position
   ┌─ tests/move_2024/constants/cross_module_call_forms.move:19:32
   │
19 │ public fun call_const(): u64 { a::MAX() }
   │                                ^^^^^^ Invalid module access. Expected a function, but found constant 'MAX' in module '0x42::a'

error[E03003]: unbound module member
   ┌─ tests/move_2024/constants/cross_module_call_forms.move:21:36
   │
21 │ public fun call_generated(): u64 { a::_const_MAX() }
   │                                    ^^^^^^^^^^^^^ Invalid module access. Unbound function '_const_MAX' in module '0x42::a'
